# fin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.test.yml
backend/: pyproject.toml
backend/app/: chat.py  database.py  main.py  portfolio.py  prices.py  snapshots.py  watchlist.py
backend/app/market/: __init__.py  cache.py  interface.py  massive.py  models.py  provider.py  simulator.py  stream.py
backend/tests/: conftest.py  test_chat.py  test_database.py  test_health.py  test_market_simulator.py  test_portfolio.py  test_prices.py
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: ChatPanel.test.tsx  Header.test.tsx  PortfolioPage.test.tsx  TradeBar.test.tsx  Watchlist.test.tsx  setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  Header.tsx  MainChart.tsx  Panel.tsx  PnlChart.tsx  PortfolioHeatmap.tsx  PositionsTable.tsx  Sparkline.tsx  TradeBar.tsx  Watchlist.tsx
frontend/src/hooks/: useMarketData.ts
frontend/src/lib/: api.ts
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: app.e2e.ts  package.json  playwright.config.ts
