[project]
name = "finally-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.8",
    "litellm>=1.81.10",
    "pydantic>=2.12.5",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
]
